--- a/app/views/exams/desktop_onboarding.html.erb
+++ b/app/views/exams/desktop_onboarding.html.erb
@@ -1,44 +1,5 @@
 <%= simple_form_for @user, url: update_user_after_onboarding_path do |f| %>
-  <div id="step_1" class="wrapper wrapper-grey">
-    <div class="container container-min-height">
-      <h2 class="text-center">Are you eligible? Please answer these few questions.</h2>
-        <div class="row">
-          <div class="col-xs-offset-1 col-xs-10">
-            <h4 style="padding-top: 20px;">Are you currently pregnant or nursing?</h4>
-            <%= f.radio_button :pregnant, true %>
-            <%= f.label :pregnant, "Yes", value: "true"  %>
-            <br>
-            <%= f.radio_button :pregnant, false %>
-            <%= f.label :pregnant, "No", value: "false" %>
-            <h4 style="padding-top: 10px;">Do you have any of the following chronic health conditions: diabetes, heart disease, high blood pressure or migraines with visual distortions?</h4>
-            <%= f.radio_button :chronic_health_conditions, true %>
-            <%= f.label :chronic_health_conditions, "Yes", value: "true"  %>
-            <br>
-            <%= f.radio_button :chronic_health_conditions, false %>
-            <%= f.label :chronic_health_conditions, "No", value: "false" %>
-            <h4 style="padding-top: 10px;">Are you currently experiencing any pain, discomfort or sudden loss of vision with your eyes?</h4>
-            <%= f.radio_button :current_pain, true %>
-            <%= f.label :current_pain, "Yes", value: "true"  %>
-            <br>
-            <%= f.radio_button :current_pain, false %>
-            <%= f.label :current_pain, "No", value: "false" %>
-            <h4 style="padding-top: 10px;">Are you currently experiencing any type of eye disease or had eye surgery within the past 12 months?</h4>
-            <%= f.radio_button :eye_surgery, true %>
-            <%= f.label :eye_surgery, "Yes", value: "true"  %>
-            <br>
-            <%= f.radio_button :eye_surgery, false %>
-            <%= f.label :eye_surgery, "No", value: "false" %>
-          </div>
-        </div>
-      <div class="row next-previous-buttons">
-        <div class="col-xs-12 col-md-offset-6 col-md-6 text-center">
-          <div id="next_1" class="btn btn-primary btn-lg">Next</div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="step_2" class="wrapper wrapper-grey hidden">
+  <div id="step_2" class="wrapper wrapper-grey">
     <div class="container container-min-height">
       <h2 class="text-center onboarding-h2">What you need to take the EasyGlasses test</h2>
       <div class="row">
@@ -83,10 +44,7 @@
         </div>
       </div>
       <div class="row next-previous-buttons">
-        <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_2" class="btn btn-primary btn-lg">Previous</div>
-        </div>
-        <div class="col-xs-12 col-md-6 text-center">
+        <div class="col-xs-12 col-md-offset-6 col-md-6 text-center">
           <div id="next_2" class="btn btn-primary btn-lg">Next</div>
         </div>
       </div>
@@ -143,7 +101,8 @@
           <br>
           <%= f.label :phone_number %>
           <br>
-          <%= f.text_field :phone_number %>
+          <%= f.label :phone_number, "+33", value: "true"  %>
+          <%= f.text_field :phone_number, placeholder: "6 44 60 10 69" %>
         </div>
         <div class="col-xs-12 col-md-4 text-center">
           <i class="fa fa-mobile" style="font-size: 200px;"></i>
@@ -288,7 +247,7 @@
 <% content_for(:after_js) do %>
   <%= javascript_tag do %>
     $(document).ready(function() {
-      <% for i in 1..8 %>
+      <% for i in 2..8 %>
         $('#next_<%= i %>').click(function(event){
           $('#step_<%= i %>').addClass('hidden');
           $('#step_<%= i + 1 %>').removeClass('hidden');
